--- a/front/chrome-extension/src/index.css
+++ b/front/chrome-extension/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html, body, #root {
+    @apply m-0 p-0 h-full w-full ;
+  }
+}
